# silicon

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
analytics/: Cargo.toml
analytics/src/: lib.rs
equations/: Cargo.toml
equations/src/: equation.rs  evaluator.rs  lib.rs  s.rs  tokenize.rs
neurons/: Cargo.toml
neurons/src/: izhikevich.rs  leaky.rs  lib.rs
plots/: Cargo.toml
plots/src/: lib.rs
silicon/: Cargo.toml
silicon-core/: Cargo.toml
silicon-core/src/: lib.rs
silicon/src/: main.rs
silicon/src/data/: mod.rs
silicon/src/learning/: mod.rs  neurotransmitters.rs
silicon/src/neurons/: mod.rs
silicon/src/structure/: cortical_column.rs  feed_forward.rs  layer.rs  mod.rs  test_column.rs
silicon/src/synapses/: mod.rs  synapse.rs
silicon/src/ui/: mod.rs  state.rs
simulator/: Cargo.toml
simulator/src/: lib.rs  recorder.rs  time.rs
src/: cortical_column.rs  main.rs  neuron.rs  synapse.rs
src/data/: mod.rs
src/neurons/: cortical_column.rs  izhikevich.rs  leaky.rs  mod.rs  oscillating.rs  synapse.rs
src/structure/: mod.rs
src/ui/: mod.rs  state.rs
synapses/: Cargo.toml
synapses/src/: lib.rs  simple.rs  stdp.rs
transcoder/: Cargo.toml
transcoder/src/: lib.rs  nlp.rs  population.rs
