[workspace]
members = [
    "analytics", "equations",
    "neurons",
    "silicon",
    "silicon-core",
    "simulator",
    "synapses",
    "transcoder",
    "ui",
]
resolver = "2"
default-members = ["silicon"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
