[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", default-features = false }
bevy-trait-query = "0.5.1"
silicon-core = { path = "../silicon-core" }
synapses = { path = "../synapses" }
analytics = { path = "../analytics" }
tracing = "0.1.40"
