[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", default-features = false }
bevy-trait-query = { git = "https://github.com/Azorlogh/bevy-trait-query.git", branch = "bevy-0.14" }
silicon-core = { path = "../silicon-core" }
synapses = { path = "../synapses" }
analytics = { path = "../analytics" }
tracing = "0.1.40"
bevy_mod_outline = "0.8.0"
